update maintainer notes and setuptools manifest with new name

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include COPYING
 include COPYING.LESSER
 include README.md
 include ssh_dispatch.py
-recursive-include anyvcs/migrations *.py
+recursive-include django_anyvcs/migrations *.py
