add a test case to test using fixture data

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include README.rst
 include README.upgrading.rst
 include RELEASE-NOTES.rst
 include ssh_dispatch.py
-recursive-include django_anyvcs/migrations *.py
+recursive-include django_anyvcs/migrations *.py *.json
