Remove django14 as a default target

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = django14,django16,django17,django18
+envlist = django16,django17,django18
 
 [testenv]
 commands = {envpython} manage.py test django_anyvcs []
