--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 env:
   - TOX_ENV=django14
+  - TOX_ENV=django15
   - TOX_ENV=django16
   - TOX_ENV=django17
   - TOX_ENV=django18
