--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = django16,django17,django18
+envlist = django14,django15,django16,django17,django18
 
 [testenv]
 commands = {envpython} manage.py test django_anyvcs []
@@ -7,6 +7,12 @@ commands = {envpython} manage.py test django_anyvcs []
 [testenv:django14]
 deps =
     Django < 1.5
+    django-sshkey
+    south
+
+[testenv:django15]
+deps =
+    Django < 1.6
     django-sshkey
     south
 
