Include South migrations in source distribution

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,5 @@ include README.rst
 include README.upgrading.rst
 include RELEASE-NOTES.rst
 include ssh_dispatch.py
-recursive-include django_anyvcs/migrations *.py *.json
+recursive-include django_anyvcs/migrations *.py
+recursive-include django_anyvcs/south_migrations *.py *.json
