--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,9 @@ envlist = django14,django15,django16,django17,django18,flake8
 
 [testenv]
 commands = {envpython} manage.py test django_anyvcs []
+deps =
+    Django < 1.9
+    django-sshkey
 
 [testenv:django14]
 deps =
